Bug 153825 - [css-grid] Fix percentage tracks' size computation in grids with gutters
Summary: [css-grid] Fix percentage tracks' size computation in grids with gutters
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Sergio Villar Senin
URL:
Keywords:
Depends on:
Blocks: 60731
  Show dependency treegraph
 
Reported: 2016-02-03 01:09 PST by Sergio Villar Senin
Modified: 2016-03-21 03:42 PDT (History)
12 users (show)

See Also:


Attachments
Patch (9.28 KB, patch)
2016-02-03 01:16 PST, Sergio Villar Senin
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from ews113 for mac-yosemite (792.26 KB, application/zip)
2016-02-03 02:23 PST, Build Bot
no flags Details
Patch (9.30 KB, patch)
2016-03-17 09:13 PDT, Sergio Villar Senin
darin: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Villar Senin 2016-02-03 01:09:50 PST
[css-grid] Fix percentage tracks' size computation in grids with gutters
Comment 1 Sergio Villar Senin 2016-02-03 01:16:08 PST
Created attachment 270567 [details]
Patch
Comment 2 Build Bot 2016-02-03 02:23:48 PST
Comment on attachment 270567 [details]
Patch

Attachment 270567 [details] did not pass mac-debug-ews (mac):
Output: http://webkit-queues.webkit.org/results/776323

New failing tests:
imported/w3c/web-platform-tests/streams-api/readable-streams/garbage-collection-2.html
Comment 3 Build Bot 2016-02-03 02:23:51 PST
Created attachment 270568 [details]
Archive of layout-test-results from ews113 for mac-yosemite

The attached test failures were seen while running run-webkit-tests on the mac-debug-ews.
Bot: ews113  Port: mac-yosemite  Platform: Mac OS X 10.10.5
Comment 4 Sergio Villar Senin 2016-02-04 01:39:31 PST
(In reply to comment #3)
> Created attachment 270568 [details]
> Archive of layout-test-results from ews113 for mac-yosemite
> 
> The attached test failures were seen while running run-webkit-tests on the
> mac-debug-ews.
> Bot: ews113  Port: mac-yosemite  Platform: Mac OS X 10.10.5

This is totally unrelated.
Comment 5 Manuel Rego Casasnovas 2016-02-04 03:30:40 PST
Comment on attachment 270567 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=270567&action=review

The patch LGTM but I'm missing tests for rows in grid-gutters-and-tracks.html.

> LayoutTests/fast/css-grid-layout/grid-gutters-and-tracks.html:23
> +.gridWithPercent { -webkit-grid-template-columns: 10px 20% repeat(2, 30px); }

Weird that you're defining 4 columns and only using 3.

> LayoutTests/fast/css-grid-layout/grid-gutters-and-tracks.html:26
> +.fixedSize { width: 220px; }

I'll call this class "width220".

> LayoutTests/fast/css-grid-layout/grid-gutters-and-tracks.html:110
> +        <div class="firstRowFirstColumn sizedToGridArea" data-offset-x="0" data-offset-y="0" data-expected-width="10" data-expected-height="20"></div>

I think you don't need sizedToGridArea for these items.

> LayoutTests/fast/css-grid-layout/grid-gutters-and-tracks.html:135
> +        <div class="firstRowFirstColumn sizedToGridArea" data-offset-x="0" data-offset-y="0" data-expected-width="132" data-expected-height="20"></div>

Ditto.
Comment 6 Sergio Villar Senin 2016-03-17 09:13:53 PDT
Created attachment 274295 [details]
Patch

Now with tests for rows. Also removed sizedToGridArea class
Comment 7 Sergio Villar Senin 2016-03-21 03:42:43 PDT
Committed r198486: <http://trac.webkit.org/changeset/198486>