[css-grid] Fix percentage tracks' size computation in grids with gutters https://bugs.webkit.org/show_bug.cgi?id=153825

Reviewed by Darin Adler.

Source/WebCore:

The track sizing algorithm is passed an available size
(freeSpace in the code) where to size the tracks. The total size of the grid
gutters was pre-removed from that available size because we cannot use it to size
the tracks. However that available size is also used to compute the size of
percentage tracks. As we're removing the size of the gutters, the base size for
percentage computations is smaller than it should be.

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::computeUsedBreadthOfGridTracks):

LayoutTests:

* fast/css-grid-layout/grid-gutters-and-flex-content-expected.txt:
* fast/css-grid-layout/grid-gutters-and-flex-content.html:
* fast/css-grid-layout/grid-gutters-and-tracks-expected.txt:
* fast/css-grid-layout/grid-gutters-and-tracks.html:

Canonical link: https://commits.webkit.org/173813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198486 268f45cc-cd09-0410-ab3c-d52691b4dbfc